force-app/main/default/objects/FinServ__FinancialAccount__c/fields/GL_Department__c.field-meta.xml
<CustomField>
    <fullName>GL_Department__c</fullName>
    <label>GL Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0000</fullName>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>0001</fullName>
                <label>Main Office</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>Retail Lending</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>Post Road Branch</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>Southborough Branch</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>Northborough Branch</label>
            </value>
            <value>
                <fullName>0006</fullName>
                <label>Sudbury Branch</label>
            </value>
            <value>
                <fullName>0007</fullName>
                <label>Westborough Branch</label>
            </value>
            <value>
                <fullName>0008</fullName>
                <label>Hudson Branch</label>
            </value>
            <value>
                <fullName>0011</fullName>
                <label>Ayer Branch</label>
            </value>
            <value>
                <fullName>0012</fullName>
                <label>Video Connect</label>
            </value>
            <value>
                <fullName>0013</fullName>
                <label>Littleton Branch</label>
            </value>
            <value>
                <fullName>0015</fullName>
                <label>Pepperell Branch</label>
            </value>
            <value>
                <fullName>0016</fullName>
                <label>Relationship Banking</label>
            </value>
            <value>
                <fullName>0017</fullName>
                <label>Lunenburg Branch</label>
            </value>
            <value>
                <fullName>0018</fullName>
                <label>Shirley Branch</label>
            </value>
            <value>
                <fullName>0019</fullName>
                <label>Groton Branch</label>
            </value>
            <value>
                <fullName>0021</fullName>
                <label>Harvard Atm</label>
            </value>
            <value>
                <fullName>0031</fullName>
                <label>Granger Bldg</label>
            </value>
            <value>
                <fullName>0032</fullName>
                <label>Ayer Bldg</label>
            </value>
            <value>
                <fullName>0033</fullName>
                <label>Operations Ctr Bldg (Forest St)</label>
            </value>
            <value>
                <fullName>0034</fullName>
                <label>Groton Bldg</label>
            </value>
            <value>
                <fullName>0035</fullName>
                <label>Pepperell Bldg</label>
            </value>
            <value>
                <fullName>0044</fullName>
                <label>Electronic Banking North</label>
            </value>
            <value>
                <fullName>0047</fullName>
                <label>Old Groton Building</label>
            </value>
            <value>
                <fullName>0048</fullName>
                <label>Old Ayer Building</label>
            </value>
            <value>
                <fullName>0049</fullName>
                <label>Training</label>
            </value>
            <value>
                <fullName>0050</fullName>
                <label>Technology</label>
            </value>
            <value>
                <fullName>0051</fullName>
                <label>Deposit Operations</label>
            </value>
            <value>
                <fullName>0052</fullName>
                <label>Executive Office</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>