force-app/main/default/objects/FinServ__FinancialAccount__c/fields/HMDA_Reportable__c.field-meta.xml
<CustomField>
    <fullName>HMDA_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HMDA Reportable</label>
    <type>Checkbox</type>
</CustomField>