force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts (Household)</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>