force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Impaired_Loan__c.field-meta.xml
<CustomField>
    <fullName>Impaired_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impaired Loan</label>
    <type>Checkbox</type>
</CustomField>