force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Index</label>
    <length>100</length>
    <type>Text</type>
</CustomField>