force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate__c</fullName>
    <label>Index Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>