force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Interest_Only_Term__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Term__c</fullName>
    <label>Interest Only Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>