force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Custom field created to increase decimal places.</description>
    <label>Interest Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>