force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Internal_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Referrer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Account_Internal_Referrer</relationshipName>
    <type>Lookup</type>
</CustomField>