force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Last_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Rate_Change__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Rate Change</label>
    <type>Date</type>
</CustomField>