force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Linked_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Linked_to_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linked to Opportunity</label>
    <type>Checkbox</type>
</CustomField>