force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Loan_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Loan_Commitment__c</fullName>
    <label>Loan Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>