force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Loan_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Exposure__c</fullName>
    <inlineHelpText>Displays either the Loan Commitment or Principal Balance for Loan Products.</inlineHelpText>
    <label>Loan Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>