force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Lockbox__c.field-meta.xml
<CustomField>
    <fullName>Lockbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lockbox</label>
    <type>Checkbox</type>
</CustomField>