force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Lockbox_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Lockbox_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lockbox Enrollment Date</label>
    <type>Date</type>
</CustomField>