force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Lost_to_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lost to Competitor</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Financial Accounts Lost to Competitor</relationshipLabel>
    <relationshipName>Financial_Accounts_Lost_to_Competitor</relationshipName>
    <type>Lookup</type>
</CustomField>