force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Master_Line__c.field-meta.xml
<CustomField>
    <fullName>Master_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Line</label>
    <type>Checkbox</type>
</CustomField>