force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Master_LOC__c.field-meta.xml
<CustomField>
    <fullName>Master_LOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master LOC</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Master LOC Draws</relationshipLabel>
    <relationshipName>Master_LOC_Draws</relationshipName>
    <type>Lookup</type>
</CustomField>