force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Master_LOC_Draw__c.field-meta.xml
<CustomField>
    <fullName>Master_LOC_Draw__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this Financial Account is related to a draw on a Master Line of Credit</inlineHelpText>
    <label>Master LOC Draw</label>
    <type>Checkbox</type>
</CustomField>