force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Mobile_Banking__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Banking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Banking</label>
    <type>Checkbox</type>
</CustomField>