force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Mobile_Remote_Deposit_Capture__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Remote_Deposit_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Deposit</label>
    <type>Checkbox</type>
</CustomField>