force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Mobile_Remote_Deposit_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Remote_Deposit_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Deposit Enrollment Date</label>
    <type>Date</type>
</CustomField>