force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Multiple_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Collateral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Collateral</label>
    <type>Checkbox</type>
</CustomField>