force-app/main/default/objects/FinServ__FinancialAccount__c/fields/NAICS_Lookup__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAICS Lookup</label>
    <referenceTo>NAICS__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>