force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Next_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Next_Rate_Change__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Rate Change</label>
    <type>Date</type>
</CustomField>