force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Non_Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>Non_Accrual_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-Accrual Date</label>
    <type>Date</type>
</CustomField>