force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Officer__c.field-meta.xml
<CustomField>
    <fullName>Officer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Officer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>