force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Online_Banking__c.field-meta.xml
<CustomField>
    <fullName>Online_Banking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Banking</label>
    <type>Checkbox</type>
</CustomField>