force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Online_Banking_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Online_Banking_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Online Banking Enrollment Date</label>
    <type>Date</type>
</CustomField>