force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Online_Banking_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Online_Banking_User_Count__c</fullName>
    <label>Online Banking User Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>