force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Original_Balance__c.field-meta.xml
<CustomField>
    <fullName>Original_Balance__c</fullName>
    <label>Original Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>