force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Originating_User__c.field-meta.xml
<CustomField>
    <fullName>Originating_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Account_Originating_User</relationshipName>
    <type>Lookup</type>
</CustomField>