force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Overdraft_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overdraft Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>