force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Participating_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Participating_Bank_Name__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Participating Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>