force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Participation__c.field-meta.xml
<CustomField>
    <fullName>Participation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participation</label>
    <type>Checkbox</type>
</CustomField>