force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Participation_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Participation_Current_Balance__c</fullName>
    <label>Participation Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>