force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Payment_Date_Text_Formula__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Text_Formula__c</fullName>
    <description>Used by Flow to access Date accurately.</description>
    <formula>TEXT(FinServ__PaymentDueDate__c)</formula>
    <label>Payment Date Text Formula</label>
    <type>Text</type>
</CustomField>