force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Percent_Sold__c.field-meta.xml
<CustomField>
    <fullName>Percent_Sold__c</fullName>
    <label>Percent Sold</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>