force-app/main/default/objects/FinServ__FinancialAccount__c/fields/PositivePay__c.field-meta.xml
<CustomField>
    <fullName>PositivePay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check PositivePay</label>
    <type>Checkbox</type>
</CustomField>