force-app/main/default/objects/FinServ__FinancialAccount__c/fields/PositivePay_ACH__c.field-meta.xml
<CustomField>
    <fullName>PositivePay_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH PositivePay</label>
    <type>Checkbox</type>
</CustomField>