force-app/main/default/objects/FinServ__FinancialAccount__c/fields/PositivePay_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>PositivePay_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check PositivePay Enrollment Date</label>
    <type>Date</type>
</CustomField>