force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Prepayment_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Penalty__c</fullName>
    <label>Prepayment Penalty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5-4-3-2-1</fullName>
            </value>
            <value>
                <fullName>3-2-1-1-1</fullName>
            </value>
            <value>
                <fullName>3-2-1</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>