force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Prepayment_Penalty_Description__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Penalty_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prepayment Penalty Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>