force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Primary_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner_ID__c</fullName>
    <formula>FinServ__PrimaryOwner__r.Id</formula>
    <label>Primary Owner ID</label>
    <type>Text</type>
</CustomField>