force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Primary_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner_Name__c</fullName>
    <formula>IF( FinServ__PrimaryOwner__r.IsPersonAccount = TRUE,  FinServ__PrimaryOwner__r.FirstName &amp;&quot; &quot;&amp;FinServ__PrimaryOwner__r.LastName ,
FinServ__PrimaryOwner__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Owner Name</label>
    <type>Text</type>
</CustomField>