force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Month CD</fullName>
            </value>
            <value>
                <fullName>6 Month CD</fullName>
            </value>
            <value>
                <fullName>7 Month CD</fullName>
            </value>
            <value>
                <fullName>9 Month CD</fullName>
            </value>
            <value>
                <fullName>10 Month CD</fullName>
            </value>
            <value>
                <fullName>11 Month CD</fullName>
            </value>
            <value>
                <fullName>12 Month CD</fullName>
            </value>
            <value>
                <fullName>13 Month CD</fullName>
            </value>
            <value>
                <fullName>14 Month CD</fullName>
            </value>
            <value>
                <fullName>15 Month CD</fullName>
            </value>
            <value>
                <fullName>17 Month CD</fullName>
            </value>
            <value>
                <fullName>18 Month CD</fullName>
            </value>
            <value>
                <fullName>24 Month CD</fullName>
            </value>
            <value>
                <fullName>25 Month CD</fullName>
            </value>
            <value>
                <fullName>35 Month CD</fullName>
            </value>
            <value>
                <fullName>36 Month CD</fullName>
            </value>
            <value>
                <fullName>48 Month CD</fullName>
            </value>
            <value>
                <fullName>60 Month CD</fullName>
            </value>
            <value>
                <fullName>Ach Manager Exposure</fullName>
            </value>
            <value>
                <fullName>Main Street Checking</fullName>
            </value>
            <value>
                <fullName>Consumer Index Checking</fullName>
            </value>
            <value>
                <fullName>BankOn Main Street Checking</fullName>
            </value>
            <value>
                <fullName>Main Street Interest Checking</fullName>
            </value>
            <value>
                <fullName>Main Street IOLTA Checking</fullName>
            </value>
            <value>
                <fullName>Main Street NonProfit Checking</fullName>
            </value>
            <value>
                <fullName>Nonprofit Analysis Checking</fullName>
            </value>
            <value>
                <fullName>Neighborhood Rewards Checking</fullName>
            </value>
            <value>
                <fullName>Business Index Checking</fullName>
            </value>
            <value>
                <fullName>DESA Master Account</fullName>
            </value>
            <value>
                <fullName>Main Street Business Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>