force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD03</fullName>
                <label>3 Month CD</label>
            </value>
            <value>
                <fullName>CD06</fullName>
                <label>6 Month CD</label>
            </value>
            <value>
                <fullName>CD07</fullName>
                <label>7 Month CD</label>
            </value>
            <value>
                <fullName>CD09</fullName>
                <label>9 Month CD</label>
            </value>
            <value>
                <fullName>CD10</fullName>
                <label>10 Month CD</label>
            </value>
            <value>
                <fullName>CD11</fullName>
                <label>11 Month CD</label>
            </value>
            <value>
                <fullName>CD12</fullName>
                <label>12 Month CD</label>
            </value>
            <value>
                <fullName>CD13</fullName>
                <label>13 Month CD</label>
            </value>
            <value>
                <fullName>CD14</fullName>
                <label>14 Month CD</label>
            </value>
            <value>
                <fullName>CD15</fullName>
                <label>15 Month CD</label>
            </value>
            <value>
                <fullName>CD17</fullName>
                <label>17 Month CD</label>
            </value>
            <value>
                <fullName>CD18</fullName>
                <label>18 Month CD</label>
            </value>
            <value>
                <fullName>CD24</fullName>
                <label>24 Month CD</label>
            </value>
            <value>
                <fullName>CD25</fullName>
                <label>25 Month CD</label>
            </value>
            <value>
                <fullName>CD35</fullName>
                <label>35 Month CD</label>
            </value>
            <value>
                <fullName>CD36</fullName>
                <label>36 Month CD</label>
            </value>
            <value>
                <fullName>CD48</fullName>
                <label>48 Month CD</label>
            </value>
            <value>
                <fullName>CD60</fullName>
                <label>60 Month CD</label>
            </value>
            <value>
                <fullName>CI07</fullName>
                <label>Ach Manager Exposure</label>
            </value>
            <value>
                <fullName>CK04</fullName>
                <label>Main Street Checking</label>
            </value>
            <value>
                <fullName>CK05</fullName>
                <label>Consumer Index Checking</label>
            </value>
            <value>
                <fullName>CK15</fullName>
                <label>BankOn Main Street Checking</label>
            </value>
            <value>
                <fullName>CK20</fullName>
                <label>Main Street Interest Checking</label>
            </value>
            <value>
                <fullName>CK21</fullName>
                <label>Main Street IOLTA Checking</label>
            </value>
            <value>
                <fullName>CK22</fullName>
                <label>Main Street NonProfit Checking</label>
            </value>
            <value>
                <fullName>CK23</fullName>
                <label>Nonprofit Analysis Checking</label>
            </value>
            <value>
                <fullName>CK50</fullName>
                <label>Neighborhood Rewards Checking</label>
            </value>
            <value>
                <fullName>CK70</fullName>
                <label>Business Index Checking</label>
            </value>
            <value>
                <fullName>CK72</fullName>
                <label>DESA Master Account</label>
            </value>
            <value>
                <fullName>CK73</fullName>
                <label>Main Street Business Checking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>