force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Proposed_Commercial_Loan_Flow_Complete__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Commercial_Loan_Flow_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposed Commercial Loan Flow Complete</label>
    <type>Checkbox</type>
</CustomField>