force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Proposed_Commercial_Loan_Stage__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Commercial_Loan_Stage__c</fullName>
    <label>Proposed Commercial Loan Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Application</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>