force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Rate_Change_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change_Frequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Change Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>