force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>