force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Recently_Modified__c.field-meta.xml
<CustomField>
    <fullName>Recently_Modified__c</fullName>
    <description>Used to determine if the record has been modified within the last day. Used on the Financial Account Assign owner flow.</description>
    <formula>LastModifiedDate + 1 &gt; NOW()+(1/1440)</formula>
    <label>Recently Modified</label>
    <type>Checkbox</type>
</CustomField>