force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Reconciliation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconciliation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Account_Reconciliation_Approve</relationshipName>
    <type>Lookup</type>
</CustomField>