force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Reconciliation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconciliation Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Account_Reconciliation</relationshipName>
    <type>Lookup</type>
</CustomField>