force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Refinance_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refinance Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>MSB Refinance Loans</relationshipLabel>
    <relationshipName>Financial_Accounts_Refinance</relationshipName>
    <type>Lookup</type>
</CustomField>