force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Refinance_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refinance Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MSB Refinance Loans</relationshipLabel>
    <relationshipName>Financial_Accounts_Refinance</relationshipName>
    <type>Lookup</type>
</CustomField>