force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Reg_O__c.field-meta.xml
<CustomField>
    <fullName>Reg_O__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reg O</label>
    <type>Checkbox</type>
</CustomField>