force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Related_Card_Count__c.field-meta.xml
<CustomField>
    <fullName>Related_Card_Count__c</fullName>
    <label>Related Card Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>