force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Relationship_Team__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Team</label>
    <referenceTo>Relationship_Team__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>