force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Remote_Deposit_Capture__c.field-meta.xml
<CustomField>
    <fullName>Remote_Deposit_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Deposit Capture</label>
    <type>Checkbox</type>
</CustomField>